# snappy

./: .gitignore  CMakeLists.txt  snappy-internal.h  snappy-sinksource.h  snappy-stubs-internal.h  snappy-stubs-public.h.in  snappy-test.h  snappy.cc  snappy_unittest.cc
cmake/: config.h.cmake  package-config.cmakein  snappy-stubs-public.h.cmake  try-compile.c
